<?xml version="1.0"?>
<package format="3">
  <name>meta</name>
  <version>0.0.1</version>
  <description>
    A meta-package to install demo_nodes_cpp (and possibly other packages).
  </description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>demo_nodes_cpp</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

</package>

