<?xml version="1.0"?>
<package format="3">
  <name>ouster_simulator</name>
  <version>0.0.1</version>
  <description>Example package that publishes/subscibes pointclouds in ouster format</description>
  <maintainer email="you@yourdomain.tld">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
